@@ -1,3 +1,8 @@
+2007-04-18  Gert Driesen  <drieseng@users.sourceforge.net>
+
+	* monoresgen.cs: Added support for 4 digit unicode escapes on 2.0
+	profile. Patch provided by Alex Earl. Fixes bug #81136.
+
 2007-04-15  Marek Safar  <marek.safar@gmail.com>
 
 	* monoresgen.cs: Use invariant ToLower.
